syntax = "proto3";
package bank;


option go_package = "/bank";

service BankService {
  rpc Get (GetRequest) returns (GetResponse);
}

message GetRequest {
  uint64 bank = 1;
}

message GetResponse {
  uint64 code = 1;
  string msg = 2;   // for error
  Bank data = 3;  // email
}

message Bank {
  uint64 id = 1;
  uint64 bank = 2;
}